# binance-algorithmic-trading

./: .gitignore  .gitmodules  README.md  pyproject.toml
binance_algorithmic_trading/: app.py
binance_algorithmic_trading/binance_algorithmic_trading/: client_manager.py  config.py  database_manager.py  logger.py  plotter.py
binance_algorithmic_trading/binance_algorithmic_trading/strategies/: EMAX_strategy.py  base_strategy.py
binance_algorithmic_trading/models/: backtests.py  klines.py
